# tui-formatter

./: Cargo.toml  README.md  app.py
src/: main.rs  table_parsing.rs
